--- a/src/main/resources/languages/ko/messages.yml
+++ b/src/main/resources/languages/ko/messages.yml
@@ -372,12 +372,12 @@ languages:
   zh-TW: '중국어 (대만)'
   vi: '베트남어'
   id: '인도네시아어'
-  el: '그리스 어'
-  he: '헤브라이어'
+  el: '그리스어'
+  he: '히브리어'
   pt: '포르투갈어 (포르투갈)'
   pt-BR: '포르투갈어 (브라질)'
   ar: '아라비아어'
-  af: '아프리카 어'
+  af: '아프리칸스어'
   da: '덴마크어'
   fi: '핀란드어'
   uk: '우크라이나어'
@@ -394,4 +394,4 @@ languages:
   hr: '크로아티아어'
   mk: '마케도니아어'
   sr: '세르비아어'
-  be: '벨로루시어'
+  be: '벨라루스어'
